--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
   "author": "RankDuong",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^6.0.0",
     "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "ejs": "^3.1.5",
     "express": "^4.17.1",
@@ -26,6 +28,8 @@
     "@babel/core": "^7.12.10",
     "@babel/node": "^7.12.10",
     "@babel/preset-env": "^7.12.10",
+    "@faker-js/faker": "^10.0.0",
+    "bcryptjs": "^3.0.2",
     "nodemon": "^2.0.7",
     "sequelize-cli": "^6.2.0"
   }
